--- a/css/contact.css
+++ b/css/contact.css
@@ -99,6 +99,7 @@
     }
     .form-contents{
         margin: 0 auto;
+        padding-right: 36px;
     }
 
     .form-container{
